deploy/app/jwtks-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-jwtks-service
spec:
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: http-jwtks-service
spec:
  ports:
  - port: 5500
    targetPort: 5500
