deploy/app/jwtks-service/base/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jwtks-service-http
spec:
  hosts:
  - s42.app
  gateways:
  - s42-app
  http:
  - name: jwtks-service-http
    match:
    - method:
        exact: GET
      uri:
        prefix: "/.well-known/jwks"
    rewrite:
      uri: "/jwks"
    route:
    - destination:
        host: jwtks-service-http
        port:
          number: 5500
